@@ -481,6 +481,7 @@ fully support the editing toolbar, but was found to be too confusing.
   page view (comes after parser cache, if used). Patch by ThomasV.
 * Linker::formatComment corrupted the passed title object on PHP 5
   if the comment included a section link. Use clone() to make a safe copy.
+* Add wfClone() wrapper since we're still using PHP 4 on some servers.
 
 
 === Caveats ===
